# Hydro-LSTM

./: .gitignore  Project.toml  example01.jl  example01.py  pyproject.toml  run.sh
Codes/: Hydro_LSTM.jl  Hydro_LSTM.py  LSTM.py  __init__.py  importing.py  main.py  utils.py
Notebooks/: ALL.py
docs/: HydroLSTM_Theory.typ
examples/: example01.jl  example01.py
